--- a/display_data_app/templates/data_search_base.html
+++ b/display_data_app/templates/data_search_base.html
@@ -13,7 +13,7 @@
 
 			<ul class="nav navbar-nav ">
 			  	<li class="nav-item active">
-					<a class="nav-link" href="#">About Us<span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="{% url 'about_us' %}">About Us<span class="sr-only">(current)</span></a>
 				</li>
 			</ul>
 			
