--- a/display_data_app/static/css/master.css
+++ b/display_data_app/static/css/master.css
@@ -44,7 +44,7 @@ img{
 }
 
 .bg {
-	background-image: url("{% static 'images/acropolis.jpg'%}");
+	background-image: url("../images/acropolis.jpg");
 	height: 100vh;
 	background-position: center;
 	background-repeat: no-repeat;
