--- a/display_data_app/templates/data_search_base.html
+++ b/display_data_app/templates/data_search_base.html
@@ -22,6 +22,20 @@
 				</li>
 			</ul>
 			
+			<ul class="nav navbar-nav">
+			  	<li class="nav-item active">
+					<a class="nav-link" href="{% url 'faq' %}">FAQ<span class="sr-only">(current)</span>
+					</a>
+				</li>
+			</ul>
+
+			<ul class="nav navbar-nav">
+			  	<li class="nav-item active">
+					<a class="nav-link" href="{% url 'glossary' %}">Glossary<span class="sr-only">(current)</span>
+					</a>
+				</li>
+			</ul>
+
 		</div>
 	</nav>
 	<div class="container databody"> 
