--- a/display_data_app/templates/data_search_info.html
+++ b/display_data_app/templates/data_search_info.html
@@ -1,7 +1,12 @@
 {% extends "data_search_base.html" %}
 {% block info %}
 
+<div class="card-container"> 
+
 <div class="card data-search-card mx-auto"> 
+	<div class="progress">
+	  <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+	</div>
  	<div class="card-block">
 	    <h4 class="card-title">Who are we?</h4>
 	    <p align="justify" class="card-text">
@@ -21,10 +26,12 @@ DCLS will not collect its users personal information without obtaining prior inf
 
 		</p>
 
-	    <form action="{% url 'data_vis' %}" method="POST"> {% csrf_token %}
+		<a class="btn btn-outline-secondary js-scroll-trigger btn-lg" href="{% url 'form1'%}">I understand</a>
+
+	   <!--  <form action="{% url 'data_vis' %}" method="POST"> {% csrf_token %}
 		    {{ form.as_p }}
 		    <button type="submit" class="save btn btn-default">Search</button>
-		</form>
+		</form> -->
   	</div>
-
+</div>
 {% endblock %}
