--- a/display_data_app/templates/index.html
+++ b/display_data_app/templates/index.html
@@ -11,7 +11,8 @@
 		</div>
 	</nav>
 	<div class="jumbotron jumbotron_index"> 
-		<h1> Interested in privacy law enforcement? </h1>
+		<h1> What can your nonprofit do </h1>
+		<h1> to protect digital privacy? </h1>
 		<h3> Search FTC Cases By Privacy Violations </h3>
 		<a class="btn btn-outline-secondary js-scroll-trigger btn-lg" href="{% url 'data_search'%}">Get Started</a>
 	<div> 
