--- a/display_data_app/templates/data_search_base.html
+++ b/display_data_app/templates/data_search_base.html
@@ -2,7 +2,7 @@
 {% block content %}
 {% load static %}
 
-<div> 
+<div class="home"> 
 	<nav class="navbar navbar-toggleable-md navbar-light bg-faded mynav datanav" role="navigation" id="navbar">
 		<div class="container">
 			<a class="navbar-brand mynav" href="{% url 'home' %}">
@@ -41,14 +41,9 @@
 	<div class="container databody"> 
 		{% block info %}
 		{% endblock %}
-	<div> 
-</div>
+	</div>
+
 </div>
 
-<div class="navbar navbar-default navbar-fixed-bottom">
-	<div class="footer">
-			<span class="muted">  © 2018 Stanford Digital Civil Society Lab </span>
-	</div>
-</div>
 
 {% endblock %}
