--- a/display_data_app/templates/index.html
+++ b/display_data_app/templates/index.html
@@ -17,10 +17,18 @@
 		<br/> 
 		<h3> We can help. </h3>
 	</div>
+	<!-- <div class="center" style="text-align:center"> 
+		<img src="{% static 'images/willie.jpg' %}" style="width:10%"/> 
+	</div> -->
+	<div class="center arrow">
+	    <a href="#info">
+	      <span class="bottom"></span>
+	    </a>
+ 	</div>
 </div>
 
 
-<div class="home container" style="padding-top:100px"> 
+<div class="home container" id="info" style="padding-top:100px"> 
 	<br/> 
 	<div class="jumbotron"> 
 		<p> 
