--- a/display_data_app/templates/bubble_plot.html
+++ b/display_data_app/templates/bubble_plot.html
@@ -1,47 +1,8 @@
 {% extends "base.html" %}
-
-{% block content %}
+{% block bubble %}
 {% load static %}
-
-<div class="bg home" style="height:100%, width:100%, position:absolute, z-index:1;">
-	<nav class="navbar navbar-toggleable-md navbar-light bg-faded mynav" role="navigation" id="navbar">
-		<div class="container">
-			<a class="navbar-brand mynav" href="{% url 'home' %}">
-				<img src="{% static 'images/logo.svg' %}" class="logo" height="100px"/>
-			</a>
-		</div>
-	</nav>
-	<div class="jumbotron jumbotron_index"> 
-		<h1> Thinking about privacy,</h1>
-		<h1> but don’t know where to start? <h1>
-		<br/> 
-		<h3> We can help. </h3>
-	</div>
-	<div class="center arrow">
-	    <a href="#info">
-	      <span class="bottom"></span>
-	    </a>
- 	</div>
-</div>
-
-
-<div class="home container" id="info" style="padding-top:100px"> 
-	<br/> 
-	<div class="jumbotron"> 
-		<p> 
-			Nonprofits, like companies and governments, have always collected, used, and shared information. In today’s world, this information is digital in form, which presents unique challenges to protecting informational privacy. Nonprofits in America, however, are largely unregulated in the management of their information – whether it be information about their employees, their donors, or their clientele. Together with the support of the Digital Civil Society Lab at Stanford University, our research team is seeking to provide best practice advice on how to manage privacy issues in respect of that information in the absence of sector-specific regulation.
-		</p>
-		<p> 
-		By asking you a few questions, we can provide an evidence-based, curated and prioritized list of implementation-level best practice advice and guidance to address your concerns. 
-		</p>
-	</div>
-	<div style="text-align:center"> 
-		<a class="btn btn-outline-secondary js-scroll-trigger btn-lg" href="{% url 'data_search'%}">Get Started</a>
-	</div>
-</div>
-
-<div class="center container" style="text-align:center">
-<h1 style="text-align:center"> Privacy Principles Enforced by FTC </h1> 
+<h1> HEY </h1>
+<div class="container"> 
 	<svg width="960" height="960" font-family="sans-serif" font-size="10" text-anchor="middle"></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script>
